# vif

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.md  gg  gg.bc  here.ll  motivation.md  notes.md  plan.md  pyt.py  script.jz  script.vif  shell.nix  spec.md  target_benchmark.ll  test.py
.github/workflows/: deploy.yaml
bugs/: callable.vif  print_closure_return_value.vif  test.vif
crates/vif-ast/: Cargo.toml
crates/vif-ast/src/: debug.rs  error.rs  lib.rs  parser.rs
crates/vif-cli/: Cargo.toml
crates/vif-cli-prof/: Cargo.toml
crates/vif-cli-prof/src/: main.rs
crates/vif-cli/src/: application.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs
crates/vif-cli/tests/: lib.rs  test_snippets.rs
crates/vif-compiler/: Cargo.toml
crates/vif-compiler/src/: compiler.rs  debug.rs  error.rs  lib.rs
crates/vif-error/: Cargo.toml
crates/vif-error/src/: lib.rs
crates/vif-llvm/: Cargo.toml
crates/vif-llvm/src/: builder.rs  compiler.rs  error.rs  lib.rs  value.rs
crates/vif-loader/: Cargo.toml
crates/vif-loader/src/: cli.rs  config.rs  lib.rs  logging.rs
crates/vif-native/: Cargo.toml
crates/vif-native/src/: errors.rs  io.rs  lib.rs  time.rs
crates/vif-objects/: Cargo.toml
crates/vif-objects/src/: ast.rs  errors.rs  function.rs  global.rs  global_store.rs  lib.rs  local.rs  op_code.rs  span.rs  stack.rs  stack_value.rs  value.rs  variable.rs  variable_storage.rs
crates/vif-scanner/: Cargo.toml
crates/vif-scanner/src/: error.rs  lib.rs  scanner.rs  token.rs
crates/vif-typing/: Cargo.toml
crates/vif-typing/src/: error.rs  lib.rs  mutability.rs  references.rs  type_merger.rs  typer.rs
crates/vif-vm/: Cargo.toml
crates/vif-vm/src/: callframe.rs  error.rs  lib.rs  vm.rs
crates/vif-vm/tests/: common.rs  lib.rs  test_snippets.rs
crates/zeus-ast/: Cargo.toml
crates/zeus-ast-old/: Cargo.toml
crates/zeus-ast-old/src/: environment.rs  errors.rs  interpreter.rs  tokenizer.rs
crates/zeus-ast/src/: error.rs  lib.rs  parser.rs
crates/zeus-cli/: Cargo.toml
crates/zeus-cli-prof/: Cargo.toml
crates/zeus-cli-prof/src/: main.rs
crates/zeus-cli/src/: application.rs  error.rs  lib.rs  main.rs
crates/zeus-compiler/: Cargo.toml
crates/zeus-compiler/src/: chunk.rs  compiler.rs  constant.rs  debug.rs  error.rs  function.rs  lib.rs  local.rs  op_code.rs  parser_rule.rs  precedence.rs  variable.rs
crates/zeus-native/: Cargo.toml
crates/zeus-native/src/: io.rs  lib.rs  time.rs
crates/zeus-objects/: Cargo.toml
crates/zeus-objects/src/: ast.rs  chunk.rs  function.rs  global.rs  lib.rs  local.rs  op_code.rs  stack.rs  value.rs  variable.rs  variable_storage.rs
crates/zeus-scanner/: Cargo.toml
crates/zeus-scanner/src/: error.rs  scanner.rs  token.rs
crates/zeus-values/: Cargo.toml
crates/zeus-values/src/: lib.rs  value.rs
crates/zeus-vm/: Cargo.toml
crates/zeus-vm/src/: callframe.rs  debug.rs  env.rs  error.rs  lib.rs  opcode.rs  value.rs  vm.rs
crates/zeus-vm/tests/: common.rs  lib.rs  test_snippets.rs
crates/zeus_ast/src/: application.rs  ast.rs  ast_printer.rs  cli.rs  main.rs  tokenizer.rs  visitor.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  introduction.md  language-design.md  language-esign.md
snippets/: benchmark.vif  closure.vif  example.zj  fibo.jz  fibo.vif  func.zj  hello_world.vif  hello_world.ze  llvm.vif  script.vif  small.vif  small.zj  test.vif  test.zj
src/: application.rs  ast.rs  ast_printer.rs  builtin.rs  cli.rs  config.rs  environment.rs  errors.rs  interpreter.rs  main.rs  parser.rs  tokenizer.rs  tokens.rs  visitor.rs
tests/: closure.vif  closure.zj  functions.vif  functions.zj  local_set_in_loop.vif  nominals.vif  nominals.zj  while.vif  while.zj
zeus_ast/: Cargo.toml
zeus_ast/src/: main.rs  tokens.rs
zeus_byte/: Cargo.toml
zeus_byte/src/: main.rs  opcode.rs
