[workspace]
members = ["crates/*"]
default-members = ["crates/zeus-cli"]
resolver = "2"

[profile.release]
codegen-units = 1 # https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
lto = "fat" # https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
panic = "abort" # https://nnethercote.github.io/perf-book/build-configuration.html#abort-on-panic

