[workspace]
members = [
  "crates/zeus-vm",
  "crates/zeus-cli",
  "crates/zeus-objects",
  "crates/zeus-native",
  "crates/zeus-scanner",
  "crates/zeus-compiler",
  "crates/zeus-ast",
]
default-members = ["crates/zeus-cli"]
resolver = "2"

[profile.release]
debug=true
codegen-units = 1 # https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
lto = "fat" # https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
panic = "abort" # https://nnethercote.github.io/perf-book/build-configuration.html#abort-on-panic

