[workspace]
members = [
  "crates/vif-vm",
  "crates/vif-cli",
  "crates/vif-objects",
  "crates/vif-native",
  "crates/vif-typing",
  "crates/vif-scanner",
  "crates/vif-compiler",
  "crates/vif-ast",
  "crates/vif-loader",
  "crates/vif-typing",
]
default-members = ["crates/vif-cli"]
resolver = "2"

[profile.release]
debug=true
codegen-units = 1 # https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
lto = "fat" # https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
panic = "abort" # https://nnethercote.github.io/perf-book/build-configuration.html#abort-on-panic

