[package]
name = "vif-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vif-objects = { version = "0.1.0", path = "../vif-objects" }
vif-loader = { version = "0.1.0", path = "../vif-loader" }
vif-scanner = { version = "0.1.0", path = "../vif-scanner" }
vif-typing = {version = "0.1.0", path = "../vif-typing"}
treeline = "0.1.0"
