[package]
name = "vif-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vif-compiler = { version = "0.1.0", path = "../vif-compiler" }
vif-loader = { version = "0.1.0", path = "../vif-loader" }
vif-vm = { version = "0.1.0", path = "../vif-vm" }
vif-ast = { version = "0.1.0", path = "../vif-ast" }
vif-typing = { version = "0.1.0", path = "../vif-typing" }
vif-objects = { version = "0.1.0", path = "../vif-objects" }
vif-error = { version = "0.1.0", path = "../vif-error" }
