[package]
name = "vif-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vif-loader = { version = "0.1.0", path = "../vif-loader" }
vif-ast = { version = "0.1.0", path = "../vif-ast" }
vif-typing = { version = "0.1.0", path = "../vif-typing" }
vif-objects = { version = "0.1.0", path = "../vif-objects" }
vif-llvm = { version = "0.1.0", path = "../vif-llvm" }
