[package]
name = "vif-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
# vif-compiler = { version = "0.1.0", path = "../vif-compiler" }
vif-objects = { version = "0.1.0", path = "../vif-objects" }
