[package]
name = "vif-typing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vif-loader = { version = "0.1.0", path = "../vif-loader" }
vif-objects = { version = "0.1.0", path = "../vif-objects" }
vif-error = { version = "0.1.0", path = "../vif-error" }

[dev-dependencies]
vif-ast = { path = "../vif-ast" }
