[package]
name = "vif-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
fern = "0.6.2"
log = "0.4.20"
vif-compiler = { version = "0.1.0", path = "../vif-compiler" }
vif-native = { version = "0.1.0", path = "../vif-native" }
vif-scanner = { version = "0.1", path = "../vif-scanner"}
vif-objects = { version = "0.1.0", path = "../vif-objects" }
