[package]
name = "vif-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vif-compiler = { version = "0.1.0", path = "../vif-compiler" }
vif-native = { version = "0.1.0", path = "../vif-native" }
vif-scanner = { version = "0.1", path = "../vif-scanner"}
vif-objects = { version = "0.1.0", path = "../vif-objects" }
