[package]
name = "zeus-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeus-objects = { version = "0.1.0", path = "../zeus-objects" }
zeus-scanner = { version = "0.1.0", path = "../zeus-scanner" }
