[package]
name = "zeus-cli-prof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pprof = { version = "0.13", features = ["flamegraph", "protobuf-codec", "prost-codec", "cpp"] }
zeus-cli = { version = "0.1.0", path = "../zeus-cli" }
